Адаптировал Promo до 767, создал бургер

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,89 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/normalize.css">
+    <!--<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap" rel="stylesheet">-->
+    <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/style.min.css">
+    <title>Glopt</title>
 </head>
 <body>
-
+<!--Sprite-->
+<svg style="display: none;">
+    symbol id="cargo"
+</svg>
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <a href="#" class="logo">
+                    <img src="icons/logo/logo.svg" alt="Logo" class="logo__img">
+                </a>
+                <nav class="header__nav">
+                    <a href="#" class="header__link">Преимущества</a>
+                    <a href="#" class="header__link">Наша работа</a>
+                    <a href="#" class="header__link">Цены</a>
+                    <a href="#" class="header__link">Схема работы</a>
+                    <a href="#" class="header__link">Отзывы</a>
+                    <a href="#" class="header__link">Контакты</a>
+                </nav>
+                <div class="header__contacts">
+                    <div class="header__descr">Есть вопросы?</div>
+                    <a href="tel:+79264230100" class="header__phone">+7 (926) 423 01 00</a>
+                </div>
+                <button class="button">перезвоните нам</button>
+                <div class="header__burger  ">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
+            <!--/.header__inner-->
+        </div>
+        <!--/.container-->
+    </header>
+    <!--/.header-->
+    <section class="promo">
+        <div class="container">
+            <div class="promo__text">
+                <div class="promo__suptitle">Global Opt - логистика полного цикла из Китая в Россию</div>
+                <h1 class="promo__title">ДОСТАВКА ГРУЗОВ ИЗ КИТАЯ</h1>
+                <div class="promo__subtitle">В РОССИЮ И СНГ ВСЕМИ ВИДАМИ ТРАНСПОРТА</div>
+            </div>
+            <!--/.promo__text-->
+            <div class="promo__lines">
+                <span class="promo__lines-line"></span>
+                <span class="promo__lines-line"></span>
+                <span class="promo__lines-dot"></span>
+            </div>
+            <div class="promo__delivery">
+                <div class="delivery-item">
+                    <img src="icons/promo/1.png" alt="Logo" class="delivery-item__img">
+                    <div class="delivery-item__descr">Перевозка негабаритных и крупнотоннажных грузов</div>
+                </div>
+                <!--/.delivery-item-->
+                <div class="delivery-item">
+                    <img src="icons/promo/2.png" alt="Logo" class="delivery-item__img">
+                    <div class="delivery-item__descr">Самостоятельно декларируем и проводим таможенную очистку с оптимизацией кодов и ставок</div>
+                </div>
+                <!--/.delivery-item-->
+                <div class="delivery-item">
+                    <img src="icons/promo/3.png" alt="Logo" class="delivery-item__img">
+                    <div class="delivery-item__descr">Осуществляем прямые поставки с заводов от двери до двери</div>
+                </div>
+                <!--/.delivery-item-->
+                <div class="delivery-item">
+                    <img src="icons/promo/4.png" alt="Logo" class="delivery-item__img">
+                    <div class="delivery-item__descr">Экспресс доставка 1-2 дня из Гуанчжоу в Москву от 25$/кг  </div>
+                </div>
+                <!--/.delivery-item-->
+            </div>
+            <!--/.promo__delivery-->
+            <button class="button button_big">Получить расчет</button>
+        </div>
+        <!--/.container-->
+    </section>
+    <!--/.promo-->
 </body>
 </html>
