fixed работает, сделал ПОДРОБНЕЕ в каталоге

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <!--<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap" rel="stylesheet">-->
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.min.css">
     <title>Glopt</title>
 </head>
@@ -223,7 +224,7 @@
                                 <div class="catalog-item__subtitle">Доставка 35-50 дней</div>
                                 <div class="catalog-item__price">от 0,3&#036; за 1 кг</div>
                                 <div class="catalog-item__descr">Морские перевозки грузов из Китая в Россию за 35 дней с прохождением таможни </div>
-                                <button class="button button_mt25">Подробнее</button>
+                                <button class="button catalog-button button_mt25">Подробнее</button>
                             </div>
                             <!--/.catalog-item__main-->
                             <div class="catalog-item__second">
@@ -239,7 +240,8 @@
                                     </li>
                                 </ul>
                                 <!--/.catalog-item__list-->
-                                <a href="#" class="catalog__back">Назад</a>
+                                <!--<a href="#" class="catalog-back">Назад</a>-->
+                                <button class="button catalog-back button_mt25">назад</button>
                             </div>
                             <!--/.catalog-item__second-->
                         </div>
@@ -508,9 +510,9 @@
         <!--/.container-->
     </section>
     <!--/.questions-->
-    <div class="map" id="map">
+    <!--<div class="map" id="map">
         <iframe src="https://yandex.ru/map-widget/v1/-/CGw~A48e"frameborder="1" allowfullscreen="true"></iframe>
-    </div>
+    </div>-->
     <!--/.map-->
     <footer class="footer">
         <div class="container">
