--- a/src/index.html
+++ b/src/index.html
@@ -370,12 +370,13 @@
                         <img src="icons/icon_bg/2.png" alt="icon" class="consultation__img">
                     </div>
                 </legend>
-                <form action="#" id="consultation-form" class="form consultation__form" method="post">
+                <form action="mailer/smart.php" id="consultation-form" class="form consultation__form" method="post">
                     <div><input name="name" placeholder="Ваше имя..." type="text"></div>
                     <div><input name="phone" placeholder="Ваш телефон..."></div>
                     <div><input name="email" placeholder="Ваш E-mail..." type="email"></div>
+                    <button type="submit" class="button button-request consultation__button">отправить заявку</button>
                 </form>
-                <button class="button button-request consultation__button">отправить заявку</button>
+
             </fieldset>
         </div>
         <!--/.container-->
@@ -498,13 +499,13 @@
                 </div>
                 <!--/.questions-wrapper__header-->
                 <div class="questions-wrapper__content">
-                    <form action="#" id="questions-form" class="form questions__form" method="post">
+                    <form action="mailer/smart.php" id="questions-form" class="form questions__form" method="post">
                         <input name="name" placeholder="Ваше имя..." type="text">
                         <input name="phone" placeholder="Ваш телефон...">
                         <input name="email" placeholder="Ваш E-mail..." type="email">
                         <textarea name="message" placeholder="Сообщение..."></textarea>
+                        <button type="submit" class="button button-request questions-wrapper__button">Отправить заявку</button>
                     </form>
-                    <button class="button button-request questions-wrapper__button">Отправить заявку</button>
                 </div>
                 <!--/.questions-wrapper__content-->
             </div>
@@ -551,17 +552,18 @@
         <!--/.container-->
     </footer>
     <!--/.footer-->
-    <div class="overlay">
+    <div class="overlay" id="overlay">
         <div class="modal" id="payment">
             <div class="modal__close">&times;</div>
             <div class="modal__subtitle">Просто заполните форму заявки</div>
             <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
-            <form action="#" id="modal-form"  class="form modal__form" method="post">
+            <form id="modal-form" action="#"  class="form modal__form">
                 <input name="name" placeholder="Ваше имя..." type="text">
                 <input name="phone" placeholder="Ваш телефон...">
                 <input name="email" placeholder="Ваш E-mail..." type="email">
+                <button type="submit" class="button button-request modal__button">отправить заявку</button>
             </form>
-            <button class="button button-request modal__button">отправить заявку</button>
+
         </div>
     </div>
 
@@ -575,6 +577,7 @@
     <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
